--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -1,7 +1,8 @@
 {
     "dashboard": "Щиток приборов",
     "sales": "Продажи",
-    "analytics": "Аналитика",
+    "workflows": "Рабочие процессы",
+    "editor": "редактор",
     "apps": "Программы",
     "components": "Компоненты",
     "elements": "Элементы",
