--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,7 +1,8 @@
 {
     "dashboard": "Dashboard",
     "sales": "Sales",
-    "analytics": "Analytics",
+    "workflows": "Workflows",
+    "editor": "Editor",
     "apps": "Apps",
     "components": "Components",
     "elements": "Elements",
