--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -45,6 +45,7 @@
     "sweet_alerts": "Alertes sucrées",
     "timeline": "Chronologie",
     "notifications": "Avis",
+    "settings": "Settings",
     "media_object": "Objet multimédia",
     "list_group": "Groupe de liste",
     "pricing_tables": "Tableaux de prix",
