--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -12,6 +12,7 @@
     "datatables": "Таблицы данных",
     "forms": "Формы",
     "users": "Пользователи",
+    "settings":"Settings",
     "pages": "Страницы",
     "authentication": "Аутентификация",
     "drag_and_drop": "Перетащить и отпустить",
