--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -125,5 +125,6 @@
     "coming_soon_boxed": "Coming Soon Boxed",
     "coming_soon_cover": "Coming Soon Cover",
     "contact_us_boxed": "Contact Us Boxed",
-    "contact_us_cover": "Contact Us Cover"
+    "contact_us_cover": "Contact Us Cover",
+     "settings": "Settings"
 }
